Navbar - collapse fix

--- a/patronazna_sluzba_project/patronazna_sluzba_project/static/css/base.css
+++ b/patronazna_sluzba_project/patronazna_sluzba_project/static/css/base.css
@@ -152,9 +152,15 @@ body{
   color: #c4ecd9;
 }
 
-/*@media (max-width: 767px) {*/
-/*@media only screen and (max-width: 1200px) {*/
-@media (max-width: 1000px){
+/*
+@media (max-width: 767px) {
+*/
+/*
+@media only screen and (max-width: 1200px) {
+*/
+ 
+/*
+@media screen and (max-width: 1199px){
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #ffffff;
   }
@@ -168,4 +174,43 @@ body{
     color: #c4ecd9;
     background-color: #15a7c7;
   }
+}
+*/
+/*  https://coderwall.com/p/wpjw4w/change-the-bootstrap-navbar-breakpoint  */
+
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
