--- a/patronazna_sluzba_project/staticfiles/css/base.css
+++ b/patronazna_sluzba_project/staticfiles/css/base.css
@@ -154,7 +154,8 @@ body{
 
 /*@media (max-width: 767px) {*/
 /*@media only screen and (max-width: 1200px) {*/
-@media (min-width: 768px) and (max-width: 1000px){
+/*  
+@media (max-width: 991px){
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #ffffff;
   }
@@ -168,4 +169,43 @@ body{
     color: #c4ecd9;
     background-color: #15a7c7;
   }
+}
+*/
+
+@media (max-width: 991px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
 }
